--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "bundle/vim-scala.git"]
 	path = bundle/vim-scala.git
 	url = https://github.com/derekwyatt/vim-scala.git
+[submodule "bundle/tagbar.git"]
+	path = bundle/tagbar.git
+	url = https://github.com/majutsushi/tagbar
